syntax = "proto3";

package dev.ercan.poc.cloud.grpc.eureka.lib;

option java_multiple_files = true;
option java_package = "dev.ercan.poc.cloud.grpc.eureka.lib";

// The greeting service definition.
service HelloService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloResponse) {
  }
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloResponse {
  string message = 1;
}